experimenting with CSS and page work

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <!-- this is how you write a comment describing your code in HTML. the body section is for all content that is visible. Keep it here! Semantic structure is just as important as syntax. -->
+
+<body>
+	<h1></h1>
+</body>
+
 <body>
 	<h1>Machine knitting</h1>
 	<h2>What is a punchcard?</h2>
@@ -20,10 +25,18 @@
 		interacting with other machine functions that you set up yourself.</p>
 		<div><a href="about.html">About</a></div>
 		<img src="images/knit_texture.png">
+	<li><h1><a href="#draft"How do pattern drafts work?></a></h1></li>
+
+	<!-- below is practicing anchor links and good for table of contents. Review because not sure what div means and how this is shown when on the actual site-->
+	<section>
+		<div>
+			<h3 id="draft">How do pattern drafts work?</h3>
+		</div>
+	</section>
 
 </body>
 
-<head>
+<body>
 	<!-- I am testing creating a comment, trying to write out my own header below -->
 	<h1>Loom Weaving</h1>
 	<h2>How do pattern drafts work?</h2>
@@ -32,5 +45,18 @@
 			is the first step to being able to read and design pattern drafts. 
 		It is setup up as a mimic to the loom, the warp threads come from the 
 		topright in front of you, the treadle tie up that you are operating </p>
+
+	<!-- For when I create my interactive section I think this piece of code will be helpful.
+	 An image map, with clickable areas:
+<img src="workplace.jpg" alt="Workplace" usemap="#workmap" width="400" height="379">
+
+<map name="workmap">
+  <area shape="rect" coords="34,44,270,350" alt="Computer" href="computer.htm">
+  <area shape="rect" coords="290,172,333,250" alt="Phone" href="phone.htm">
+  <area shape="circle" coords="337,300,44" alt="Cup of coffee" href="coffee.htm">
+</map>
+		From: https://www.w3schools.com/tags/tag_area.asp 
+		Should be supported by all browsers! -->
+</body>
 
 </html>
