update with images and pages

--- a/index.html
+++ b/index.html
@@ -7,22 +7,37 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>programming textiles</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="style.css"/>
 </head>
 <!-- this is how you write a comment describing your code in HTML. the body section is for all content that is visible. Keep it here! Semantic structure is just as important as syntax. -->
 
-<body>
-	<h1></h1>
-</body>
 
 <body>
-	<h1>Machine knitting</h1>
-	<h2>What is a punchcard?</h2>
-		<p>Alongside manipulating the machine manually to create textures and colour changes,
-			you can help the machine know what to do and when to do it by itself with the 
-		use of a punchcard. Depending on the technique you would like to use, whether you 
-		punch a hole or leave it unpunched informs the machine of different things, always
-		interacting with other machine functions that you set up yourself.</p>
+	<h1>Weaving and knitting - industrial progression and computation</h1>
+	<div class="row">
+		<div class="column" style="background-color: #EEE4DA;">
+			<h2>What is a punchcard?</h2>
+				<p>What started with the automatization of loom weaving with the Jacquard loom and 
+				its' operative punchcards to inform of treadle changes, the punchcard system has 
+				moved towards popular use in machine knitting, while project drafting for weaving bears
+				resemblance to the binary system used in early computation.
+				Alongside manipulating the knitting machine manually to create textures and colour changes,
+				you can help the machine know what to do and when to do it by itself with the 
+				use of a punchcard. Depending on the technique you would like to use, whether you 
+				punch a hole or leave it unpunched informs the machine of different things, always
+				interacting with other machine functions that you set up yourself.</p>
+		</div>
+		<div class="column" style="background-color: #EEE4DA;">
+			<h2>How do pattern drafts work?</h2>
+				<p>Understanding the components that are required for a functional loom
+				is the first step to being able to read and design pattern drafts. 
+				It is setup up as a mimic to the loom, the warp threads come from the 
+				topright in front of you, the treadle tie up that you are operating </p>
+		</div>
+	</div>
+	
+	
+
 		<div><a href="about.html">About</a></div>
 		<img src="images/knit_texture.png">
 	<li><h1><a href="#draft"How do pattern drafts work?></a></h1></li>
@@ -47,6 +62,11 @@
 		topright in front of you, the treadle tie up that you are operating </p>
 
 	<!-- For when I create my interactive section I think this piece of code will be helpful.
+	 ** is actually for redirecting the user to another page when they click within the bounds of a 
+	 set of coordinates. Not actually relevant for the interactive part but might be interesting
+	 if need another image area to redirect the user.
+			For future ideas: what if the certain diagrams or drawings can pop-out an information box
+				e.g. illustration of yarn threaded through punchholes and when yarn is clicked, info page about yarn choices, consumption, etc.
 	 An image map, with clickable areas:
 <img src="workplace.jpg" alt="Workplace" usemap="#workmap" width="400" height="379">
 
