--- a/knit.html
+++ b/knit.html
@@ -26,14 +26,19 @@
 	
 	<div class="row">
 		<div class="column" style="background-color:#EEE4DA">
-			<img src="punchcard1.jpg">
+			<img src="images/punchcard1.png">
 		</div>
 		<div class="column" style="background-color:#EEE4DA">
 			<h2>Technical application and use</h2>
 			<p>Info about the punchcard example.</p>
 		</div>
 	</div>
-	
 </body>
 
 </html>
+
+
+<!-- in CSS to change colours when going over the button possibly works:
+ button, .buttontext {color;}
+ button.hover, buttontext {color;}
+ - from Evan in class - his website-->
