--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 
 
 <body>
+<nav-ul>
+	<li><a href="knit.html"> <img src="images/knit_texture.png" alt="Machine Knitting"></a></li>
+	<li><a href="weaving.html"> <img src="images/navbar_weave.png" alt="Loom Weaving"></a></li>
+	<li><a href="analog_programming.html"> <img src="images/punchcard1.png" alt="Analogue Programming"></a></li>
+	<li><a href="index.html">About</a></li>
+</nav-ul>
+
 	<h1>Weaving and knitting - industrial progression and computation</h1>
 	<div class="row">
 		<div class="column" style="background-color: #EEE4DA;">
@@ -52,6 +59,8 @@
 </body>
 
 <body>
+
+
 	<!-- I am testing creating a comment, trying to write out my own header below -->
 	<h1>Loom Weaving</h1>
 	<h2>How do pattern drafts work?</h2>
