--- a/weaving.html
+++ b/weaving.html
@@ -20,9 +20,18 @@
  https://www.w3schools.com/html/html_layout.asp -->
 
 <body>
-	<!--breadcrumbs here with hyperlinks-->
-	<h1>Tuck and Slip Stitches</h1>
-	<h2>Subheading</h2>
+
+<nav-ul>
+	<li><a href="knit.html"> <img src="images/knit_texture.png" alt="Machine Knitting"></a></li>
+	<li><a href="weaving.html"> <img src="images/weave_texture.png" alt="Loom Weaving"></a></li>
+	<li><a href="analog_programming.html"> <img src="images/punchcard1.png" alt="Analogue Programming"></a></li>
+	<li><a href="index.html">About</a></li>
+</nav-ul>
+	
+<!--ABOVE is the centered navbar
+breadcrumbs here with hyperlinks-->
+	<h1>Pattern Drafts</h1>
+	<h2>Understanding fundamentals of reading and designing a pattern draft for loom weaving.</h2>
 	
 	<div class="row">
 		<div class="column" style="background-color:#EEE4DA">
@@ -35,6 +44,25 @@
 		</div>
 	</div>
 	
+<footer class="rectangle">
+
+	<table style="width: 100%; table-layout: fixed;">
+		<colgroup>
+			<col style="width: 50%;">
+			<col style="width: 50%;">
+		</colgroup>
+		<tr>
+			<td><a style="padding: 5px;" href="index.html">About this site</a></td>
+			<td><a style="padding: 5px;" href="analog_programming.html">Analog Programming</a></td>
+		</tr>
+		<tr>
+			<td><a style="padding: 5px;" href="knit.html">Machine Knitting</a></td>
+			<td><a style="padding: 5px;" href="weaving.html">Loom Weaving</a></td>
+		</tr>
+	</table>
+
+</footer>
+
 </body>
 
 </html>
